--- a/GEPED.Web/Views/Home/Create.cshtml
+++ b/GEPED.Web/Views/Home/Create.cshtml
@@ -5,17 +5,17 @@
 }
 
 @{
-            List<SelectListItem> BrandItems = new List<SelectListItem>();
-            BrandItems.Add(new SelectListItem
-            {
-                Text = "Mastercard",
-                Value = "Mastercard"
-            });
-            BrandItems.Add(new SelectListItem
-            {
-                Text = "Visa",
-                Value = "Visa"
-            });
+    List<SelectListItem> BrandItems = new List<SelectListItem>();
+    //BrandItems.Add(new SelectListItem
+    //{
+    //    Text = "Mastercard",
+    //    Value = "Mastercard"
+    //});
+    BrandItems.Add(new SelectListItem
+    {
+        Text = "Visa",
+        Value = "Visa"
+    });
 }
 
 <h2>Novo Pedido</h2>
@@ -29,7 +29,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Customer.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Customer.Name, "Nome do Cliente", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Customer.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Customer.Name, "", new { @class = "text-danger" })
