--- a/GEPED.Web/Views/Home/Index.cshtml
+++ b/GEPED.Web/Views/Home/Index.cshtml
@@ -1,50 +1,98 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@model List<GEPED.Web.Models.MerchantOrderViewModel>
 
 <div class="row">
     <div class="col-md-6">
-        <h2>Verificar situação do pedido: </h2>
+        <br />
         <p>
-            @Html.TextBox("IdPedido")
-            <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Buscar</a>
-        </p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-6">
-        <p>
-            <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Novo</a>
             @Html.ActionLink("Novo", "Create", "Home")
         </p>
     </div>
 </div>
 
-@*<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@if (Model.Any())
+{
+    <div class="row">
+        <div class="col-md-6">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            <br />
+            @using (Html.BeginForm())
+            {
+                <p>
+                    Buscar pedido: @Html.TextBox("OrderId")
+                    <input type="submit" class="btn btn-default" value="Buscar" />
+                </p>
+            }
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+    <div class="row">
+        <table class="table">
+            <tr>
+                <th>
+                    Pedido
+                </th>
+                <th>
+                    Nome do Cliente
+                </th>
+                <th>
+                    Valor
+                </th>
+                <th>
+                    Parcelas
+                </th>
+                <th>
+                    Status
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Customer.Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Payment.Amount)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Payment.Installments)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                    <td>
+                        @Html.ActionLink("Consultar", "Details", new { merchantOrderId = item.Id }) |
+                        @Html.ActionLink("Capturar", "Capturar", new { merchantOrderId = item.Id }) |
+                        @Html.ActionLink("Cancelar", "Cancelar", new { merchantOrderId = item.Id })
+                    </td>
+                </tr>
+            }
+
+        </table>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>*@
+
+}
+    @*<div class="jumbotron">
+            <h1>ASP.NET</h1>
+            <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+            <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <h2>Getting started</h2>
+                <p>
+                    ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+                    enables a clean separation of concerns and gives you full control over markup
+                    for enjoyable, agile development.
+                </p>
+                <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Get more libraries</h2>
+                <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+                <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Web Hosting</h2>
+                <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+            </div>
+        </div>*@
